# MapDesigner

./: CMakeLists.txt  LICENSE  README.md  test.py  test_input.txt  test_map.txt  test_output.txt
.github/workflows/: cmake-multi-platform.yml
src/: instructions.h  map_designer.h  map_designer_console.c  map_designer_sdl.c  sprites.h
